fix for dialog pane z-index

--- a/desktop.platform/english.lproj/sc.theme/pane.css
+++ b/desktop.platform/english.lproj/sc.theme/pane.css
@@ -1,3 +1,4 @@
 .sc-theme .sc-dialog-pane {
+  z-index: 2000;
   background: static_url('panels/overlay') repeat;
 }
